# zmap

./: .gitignore  LICENCE
foocanvas/zmap_source/: configure.in  configure.in.diff
g2/: Makefile.am  configure.ac  src_Makefile.am
src/: .cvsignore  .gitignore  COPYING  ChangeLog  Doxyfile  Doxyfile.in  INSTALL  INSTALL.DEVELOPER  INSTALL.VM  INSTALL.linux  INSTALL.mac  INSTALL.windows  MIGRATE  Makefile.am  Makefile.common  Makefile.in  Makefile.zmap  README  README.DEVELOPER  README.zmap  TODO  ac_path_lib.m4  aclocal.m4  autogen.sh  bootstrap  configure  configure.ac  doc  dotZmap.in  doxyhtml.ftr  doxyhtml.hdr  git_version.sh  libcurl.m4  makefile  runbootstrap  runconfig  runzmap  sh_functions.sh  so-hack.obo  so-xp.obo  (+4 more)
src/AceConn/: .gitignore  AceConn-1.1.pc.in  ChangeLog  Makefile.am  NEWS  README  README_ZMAP  acinclude.m4  autogen.sh  configure.ac
src/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/canvas_choice/: Makefile.am  Makefile.in  README.canvas_choice  README.performance  containers.c  containers.h  crcanvas_demo.c  crcanvas_demo.h  foocanvas_demo.c  foocanvas_demo.h  goocanvas_demo.c  goocanvas_demo.h  goocanvas_mv_demo.c  goocanvas_mv_demo.h  gui.c  gui.h  long_item_test.c  long_item_test.h  performance.gnumeric  utils.c  utils.h
src/ensc-core/: .gitignore  README  README_ZMAP
src/gbtools/: .gitignore  README  README_ZMAP
src/htslib/: README_ZMAP
src/htslib-develop/: Makefile  README_ZMAP
src/include/: Makefile.am  Makefile.in
src/lib/: Makefile.am
src/libAceConn/: .gitignore  Makefile.am
src/libcurlobject/: Makefile.am  libcurlobject.c  libcurlobject.h  libcurlobject_I.h
src/libpfetch/: .cvsignore  Makefile.am  libpfetch-utils.c  libpfetch.c  libpfetch.h  libpfetch_I.h  libpfetch_P.h
src/libzmapfoocanvas/: AUTHORS  COPYING.LIB  Makefile.am  Makefile.in  README  README.ZMAP  foo-canvas-i18n.h  foo-canvas-line.c  foo-canvas-line.h  foo-canvas-marshal.list  foo-canvas-pixbuf.c  foo-canvas-pixbuf.h  foo-canvas-polygon.c  foo-canvas-polygon.h  foo-canvas-rect-ellipse.c  foo-canvas-rect-ellipse.h  foo-canvas-text.c  foo-canvas-text.h  foo-canvas-widget.c  foo-canvas-widget.h  foo-canvas.c  foo-canvas.h  foozmap-canvas-floating-group.c  foozmap-canvas-floating-group.h  foozmap-canvas-line-glyph.c  foozmap-canvas-line-glyph.h  foozmap-canvas-text.c  foozmap-canvas-text.h  libfoocanvas.h  libfoocanvastypes.c
src/m4/: .gitignore
src/perl/: Makefile.PL  build.sh
src/samtools_parallel/: .gitignore  Makefile  Makefile.am  Makefile.orig  README.md  bam.c  bam.h  bam2depth.c  bam_aux.c  bam_cat.c  bam_index.c  bam_reheader.c  bam_rmdupse.c  bam_sort.c  bam_tview.c  bamshuf.c  bamtk.c  bedcov.c  bgzip.c  kstring.h  padding.c  sam.c  sam_header.c  sam_view.c
src/tests/: Makefile.am  check_zmapmain.c  check_zmapmain.cpp  zmapCheck.h  zmapSuites.h
src/zeromq/: .gitignore  README_ZMAP  configure.ac
src/zmapApp/: .#zmapApp_P.h  Makefile.am  Makefile.in  README  ZMapDoxyMainPage  makefile  zmapAppManager.c  zmapAppManager.cpp  zmapAppRemoteCommand.c  zmapAppRemoteCommand.cpp  zmapAppRemoteControl.c  zmapAppRemoteControl.cpp  zmapAppRemoteInternal.c  zmapAppRemoteInternal.cpp  zmapAppRemoteInternal.h  zmapAppRemoteInternal.hpp  zmapAppRemote_P.hpp  zmapApp_P.h  zmapApp_P.hpp  zmapApp_PP.h  zmapAppconnect.c  zmapAppconnect.cpp  zmapAppmain_C.C  zmapAppmain_c.c  zmapAppmain_c.cc  zmapAppmain_c.cpp  zmapAppmanage.c  zmapAppmanagepanel.c  zmapAppmanagepanel.cpp  zmapAppmenubar.c  zmapAppmenubar.cpp  zmapAppremote.c  zmapAppwindow.c  zmapAppwindow.cpp
src/zmapAppServices/: Makefile.am  Makefile.in  README  zmapAppDebugConfig.c  zmapAppDebugConfig.cpp  zmapAppSequenceView.c  zmapAppSequenceView.cpp  zmapAppServices_P.hpp  zmapAppSource.cpp
src/zmapConfig/: .#zmapConfigIni.cpp  .gitignore  Makefile.am  Makefile.in  README  ZMap_gen_schema.sql  ZMap_half_schema.sql  ZMap_schema.sql  default_styles.c  default_styles.txt  gen_default  makefile  zmapConfig.c  zmapConfigDir.c  zmapConfigDir.cpp  zmapConfigDir_P.h  zmapConfigDir_P.hpp  zmapConfigFile.c  zmapConfigFile.cpp  zmapConfigGet.c  zmapConfigIni.c  zmapConfigIni.cpp  zmapConfigIni_P.h  zmapConfigIni_P.hpp  zmapConfigKey.c  zmapConfigKey.cpp  zmapConfigLoader.c  zmapConfigLoader.cpp  zmapConfigRead.c  zmapConfigUtils.c  zmapConfigWrite.c  zmapConfig_P.h  zmap_DefaultStyles.pl
src/zmapControl/: Makefile.am  Makefile.in  README  TODO  makefile  zmapControl.c  zmapControl.cpp  zmapControlImportFile.c  zmapControlImportFile.cpp  zmapControlImportFile.orig.cpp  zmapControlNavigator.c  zmapControlNavigator.cpp  zmapControlPreferences.c  zmapControlPreferences.cpp  zmapControlRemote.c  zmapControlRemoteControl.c  zmapControlRemoteControl.cpp  zmapControlRemoteReceive.c  zmapControlRemoteSend.c  zmapControlRemoteXML.c  zmapControlRemote_P.h  zmapControlSplit.c  zmapControlStyles.cpp  zmapControlViews.c  zmapControlViews.cpp  zmapControlWindow.c  zmapControlWindow.cpp  zmapControlWindowButtons.c  zmapControlWindowButtons.cpp  zmapControlWindowFrame.c  zmapControlWindowFrame.cpp  zmapControlWindowInfoPanel.c  zmapControlWindowInfoPanel.cpp  zmapControlWindowMenubar.c  zmapControlWindowMenubar.cpp  zmapControl_P.h  zmapControl_P.hpp  zmapNavigator_P.h  zmapNavigator_P.hpp
src/zmapDAS/: Makefile.am  zmapDAS1DSN.c  zmapDAS1DSN.cpp  zmapDAS1Parser.c  zmapDAS1Parser.cpp
src/zmapDataSource/: Makefile.am  Makefile.in  README  zmapDataSlave.cpp  zmapDataSource.cpp  zmapDataSourceServer.cpp  zmapDataSourceServer_P.hpp  zmapDataSourceSlaveHandler.cpp  zmapDataSourceStepList.cpp  zmapDataSource_P.hpp  zmapOldSlaveHandler.cpp  zmapOldSourceServer.cpp  zmapOldSourceServer_P.hpp  zmapOldStepList.cpp
src/zmapDocs/: ZMapConfigFiles.c  ZMapMainPage.c  ZMapMainPage.txt
src/zmapDraw/: Makefile.am  Makefile.in  makefile  zmapDraw.c  zmapDraw.cpp  zmapDraw.h  zmapDraw_P.h  zmapDraw_P.hpp
src/zmapFeature/: Makefile.am  Makefile.in  README  Style.keyword_value.txt  makefile  zmapFeature.c  zmapFeature.cpp  zmapFeature3FrameTranslation.c  zmapFeature3FrameTranslation.cpp  (+43 more)
(+2537 files in other folders)
